--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@reduxjs/toolkit": "^1.9.2",
     "@types/react": "^18.0.27",
     "babel-loader": "^9.1.2",
     "classnames": "^2.3.2",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-select": "^5.7.0",
     "style-loader": "^3.3.1",
