--- a/package.json
+++ b/package.json
@@ -4,50 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint --fix ./src"
-  },
-  "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@reduxjs/toolkit": "^1.9.2",
-    "@types/react": "^18.0.27",
-    "babel-loader": "^9.1.2",
-    "classnames": "^2.3.2",
-    "css-loader": "^6.7.3",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
-    "react-collapse": "^5.1.1",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
-    "react-select": "^5.7.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.4.2"
-  },
-  "devDependencies": {
-    "@types/react-collapse": "^5.0.1",
-    "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard-with-typescript": "^31.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.32.1",
-    "prettier": "^2.8.3",
-    "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
-    "typescript": "*",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "start:client": "cd ./client & yarn start"
   }
 }
