--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start:client": "cd ./client & yarn start"
+  },
+  "dependencies": {
+    "@nestjs/jwt": "^10.0.2"
   }
 }
