--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@typegoose/typegoose": "^10.3.0",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^7.0.0",
     "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
@@ -36,6 +37,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^8.0.1",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/mongoose": "^5.11.97",
