--- a/server/package.json
+++ b/server/package.json
@@ -27,13 +27,19 @@
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.1",
     "@typegoose/typegoose": "^10.3.0",
+    "@types/app-root-path": "^1.2.4",
+    "app-root-path": "^3.1.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.29.3",
+    "fs-extra": "^11.1.0",
     "mongoose": "^7.0.0",
     "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -41,9 +47,12 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^11.0.1",
     "@types/jest": "28.1.8",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/sharp": "^0.31.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
