--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -7,11 +7,13 @@
   "extends": [
     "plugin:react/recommended",
     "standard-with-typescript",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "@typescript-eslint/parser"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
+    "tsconfigRootDir": ".",
     "project": "./tsconfig.json"
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
