--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.18.6",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/react": "^18.0.27",
+    "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
     "classnames": "^2.3.2",
     "css-loader": "^6.7.3",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-select": "^5.7.0",
