--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "lint": "eslint ./src",
-    "lint:fix": "eslint --fix ./src"
+    "lint:fix": "eslint --fix ./src",
+    "typecheck": "npx tsc -p tsconfig.lint.json"
   },
   "dependencies": {
     "@babel/core": "^7.20.12",
@@ -15,6 +16,7 @@
     "@babel/preset-react": "^7.18.6",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/react": "^18.0.27",
+    "@typescript-eslint/parser": "^5.58.0",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
     "classnames": "^2.3.2",
@@ -25,6 +27,7 @@
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
