--- a/client/tsconfig.lint.json
+++ b/client/tsconfig.lint.json
@@ -1,6 +1,6 @@
 {
   "include": ["src/**/*", "custom.d.ts"],
-  "exclude": ["./dist/", "node_modules"],
+  "exclude": ["./dist/", "node_modules/*", "tsconfig.json"],
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
@@ -12,6 +12,7 @@
     "removeComments": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "_components/*": ["./src/components/*"],
