--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start:client": "cd ./client & yarn start"
+    "start:client": "cd ./client & yarn start",
+    "start:server": "cd ./server & yarn start:dev"
+  },
+  "dependencies": {
+    "@types/react-helmet": "^6.1.6"
   }
 }
