--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
         run: yarn lint
   build:
     runs-on: ubuntu-latest
+    needs: [lint, test]
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
