--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
       "pre-push": "yarn lint"
     }
   },
+  "engines": {
+    "node": "16.13.1"
+  },
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
@@ -38,7 +41,8 @@
     "react-router-dom": "^6.8.1",
     "react-select": "^5.7.0",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.4.2"
+    "ts-loader": "^9.4.2",
+    "zapilman-ui": "^1.0.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
