--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,7 @@ jobs:
           mkdir "$HOME/.ssh"
           echo "${{secrets.SSH_KEY}}" > "$HOME/.ssh/key"
           chmod 600 "$HOME/.ssh/key"
+          echo "$HOME/.ssh/key"
 
       - name: deploy
         run: cd dist && rsync -e "ssh -p $HOME/.ssh/key -o StrictHostKeyChecking=no" -avz --delete . ubuntu@ec2-52-58-206-218.eu-central-1.compute.amazonaws.com:/var/www/kek
