--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,8 @@
 name: Test
 on: push
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-
-      - name: Install deps
-        run: yarn install
-
-      - name: Cache Yarn packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/yarn
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Test app
-        run: yarn typecheck
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-
-      - name: Install deps
-        run: yarn
-
-      - name: Cache Yarn packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/yarn
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Lint code
-        run: yarn lint
   build:
     runs-on: ubuntu-latest
-    needs: [lint, test]
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
@@ -66,11 +27,11 @@ jobs:
       - name: setup key
         run: mkdir "$HOME/.ssh"
       - name: setup key
-        run: echo "${{secrets.SSH_KEY}}" > "$HOME/.ssh/key"
+        run: echo "${{secrets.SSH_KEY}}" > "$HOME/.ssh/free-aws-sshkey.pem"
       - name: setup key
-        run: chmod 400 "$HOME/.ssh/key"
+        run: chmod 400 "$HOME/.ssh/free-aws-sshkey.pem"
       - name: setup key
-        run: echo "$HOME/.ssh/key"
+        run: echo "$HOME/.ssh/free-aws-sshkey.pem"
 
       - name: deploy
         #run: cd dist && rsync -e "ssh -p $HOME/.ssh/key -o StrictHostKeyChecking=no" -avz --delete . ubuntu@ec2-52-58-206-218.eu-central-1.compute.amazonaws.com:/var/www/kek
