--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,9 @@ jobs:
 
       - name: deploy
         run: |
-          ssh -i $HOME/.ssh/free-aws-sshkey.pem -o StrictHostKeyChecking=no ubuntu@ec2-3-75-97-228.eu-central-1.compute.amazonaws.com "sudo mkdir -p www/pupa"
+          ssh -i $HOME/.ssh/free-aws-sshkey.pem -o StrictHostKeyChecking=no ubuntu@ec2-3-75-97-228.eu-central-1.compute.amazonaws.com "sudo mkdir -p serGay"
           cd dist
-          rsync -e "ssh -i $HOME/.ssh/free-aws-sshkey.pem" -avz --delete . ubuntu@ec2-3-75-97-228.eu-central-1.compute.amazonaws.com:www/kek
+          rsync -e "ssh -i $HOME/.ssh/free-aws-sshkey.pem" -avz --delete . ubuntu@ec2-3-75-97-228.eu-central-1.compute.amazonaws.com:serGay
       #run: cd $HOME/.ssh && ssh -i free-aws-sshkey.pem -o StrictHostKeyChecking=no ubuntu@ec2-52-58-206-218.eu-central-1.compute.amazonaws.com "sudo mkdir -p www/was"
       - name: send telegram message
         uses: appleboy/telegram-action@master
