--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,19 @@ jobs:
       - name: Get repository code
         uses: actions/checkout@v3
 
+      - name: Get branch name
+        run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
+      - name: Привести название к нижнему регистру
+        run: echo "::set-env name=BRANCH_NAME::$(echo ${{ env.BRANCH_NAME }} | tr '[:upper:]' '[:lower:]')"
+
+      - name: Проверить название ветки
+        run: |
+          if [ "${{ env.BRANCH_NAME }}" = "master" ]; then
+            echo "Выполнение прервано, так как название ветки равно 'master'"
+            exit 1
+          fi
+
       - name: Install deps
         run: yarn
 
@@ -31,10 +44,10 @@ jobs:
 
       - name: deploy
         run: |
-          ssh -i $HOME/.ssh/free-aws-sshkey.pem -o StrictHostKeyChecking=no ubuntu@ec2-3-75-97-228.eu-central-1.compute.amazonaws.com "mkdir -p gay"
+          ssh -i $HOME/.ssh/free-aws-sshkey.pem -o StrictHostKeyChecking=no ubuntu@ec2-3-75-97-228.eu-central-1.compute.amazonaws.com "mkdir -p ${{ env.BRANCH_NAME }}"
           cd dist
-          rsync -e "ssh -i $HOME/.ssh/free-aws-sshkey.pem" --archive --compress --delete . ubuntu@ec2-3-75-97-228.eu-central-1.compute.amazonaws.com:gay
-      #run: cd $HOME/.ssh && ssh -i free-aws-sshkey.pem -o StrictHostKeyChecking=no ubuntu@ec2-52-58-206-218.eu-central-1.compute.amazonaws.com "sudo mkdir -p www/was"
+          rsync -e "ssh -i $HOME/.ssh/free-aws-sshkey.pem" --archive --compress --delete . ubuntu@ec2-3-75-97-228.eu-central-1.compute.amazonaws.com:${{ env.BRANCH_NAME }}
+
       - name: send telegram message
         uses: appleboy/telegram-action@master
         with:
