--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get branch name
-        run: echo "BRANCH_NAME=${{github.head_ref}}" >> $GITHUB_ENV
+        run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
       - name: Привести название к нижнему регистру
-        run: echo "::set-env name=BRANCH_NAME::$(echo ${{ env.BRANCH_NAME }} | tr '[:upper:]' '[:lower:]')"
+        run: echo "::set-output name=BRANCH_NAME::$(echo ${{ env.BRANCH_NAME }} | tr '[:upper:]' '[:lower:]')"
 
       - name: Проверить название ветки
         run: |
