--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@babel/preset-react": "^7.18.6",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-router": "^5.1.20",
     "@typescript-eslint/parser": "^5.58.0",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
@@ -35,6 +37,7 @@
     "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
+    "react-router": "^6.11.1",
     "react-router-dom": "^6.8.1",
     "react-select": "^5.7.0",
     "style-loader": "^3.3.1",
