--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "set NODE_ENV=development&&webpack-dev-server --mode development --open --hot ",
     "build": "webpack --mode production",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
