--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,8 @@
     "@typescript-eslint/prefer-nullish-coalescing": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-floating-promises": "off",
-    "@typescript-eslint/consistent-type-assertions": "off"
+    "@typescript-eslint/consistent-type-assertions": "off",
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/no-extraneous-class": "off"
   }
 }
