--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "i18next": "^22.4.15",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.3.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router": "^6.11.1",
@@ -42,7 +45,9 @@
     "react-select": "^5.7.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
-    "zapilman-ui": "^1.0.1"
+    "ulbi-tv-ui-kit": "^1.0.3",
+    "zapilman-ui": "^1.0.1",
+    "zdorov-ui": "^1.0.9-alpha.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
