--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router": "^6.11.1",
     "react-router-dom": "^6.8.1",
     "react-select": "^5.7.0",
+    "react-transition-group": "^4.4.5",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ulbi-tv-ui-kit": "^1.0.3",
@@ -54,6 +55,7 @@
     "@types/react-collapse": "^5.0.1",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.6.0",
