--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "sass-loader": "^13.2.0",
     "typescript": "^5.0.4",
     "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   }
