--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@lokalise/node-api": "^9.8.1",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.2.4",
@@ -29,9 +30,12 @@
     "classnames": "^2.3.2",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
+    "fs": "^0.0.1-security",
+    "glob": "^10.2.6",
     "html-webpack-plugin": "^5.5.0",
     "i18next": "^22.4.15",
     "normalize.css": "^8.0.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
