--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "lint:fix": "eslint --fix ./src",
     "typecheck": "npx tsc -p tsconfig.lint.json"
   },
-
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn lint"
+    }
+  },
+  "type": "module",
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
