--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
       "version": "detect"
     }
   },
+  "type": "module",
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
