--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "pre-push": "yarn lint"
     }
   },
+  "type": "module",
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
