--- a/package.json
+++ b/package.json
@@ -56,13 +56,14 @@
     "zdorov-ui": "^1.0.9-alpha.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.21.8",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/react-collapse": "^5.0.1",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "eslint": "5.16.0",
+    "eslint": "8.38.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^31.0.0",
     "eslint-plugin-import": "^2.25.2",
