--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "type": "module",
     "paths": {
       "_components/*": ["./src/components/*"],
       "_modules/*": ["./src/modules/*"],
