--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,10 +18,8 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "project": "tsconfig.json",
-    "tsconfigRootDir": ".",
-    "requireConfigFile": false,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
