--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -35,7 +35,7 @@ jobs:
         run: yarn build
 
       - name: Install Lokalise Cli
-        run: yarn add -g lokalise-cli
+        run: curl -sfL https://raw.githubusercontent.com/lokalise/lokalise-cli-2-go/master/install.sh | sh
 
       - name: Upload translations
-        run: lokalise --token b319d056c11b5779919044529c75d9c3db60a45d file upload --file translations.json --lang-iso en --project-id 4479144264646922bb4ee1.51100677
+        run: ./bin/lokalise2 --token b319d056c11b5779919044529c75d9c3db60a45d file upload --file translations.json --lang-iso en --project-id 4479144264646922bb4ee1.51100677
