--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -1,44 +1,44 @@
-name: Test
-on: push
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
+# name: Test
+# on: push
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Get repository code
+#         uses: actions/checkout@v3
 
-      - name: Get branch name
-        run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
+#       - name: Get branch name
+#         run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
-      - name: Привести название к нижнему регистру
-        run: echo "::set-output name=BRANCH_NAME::$(echo ${{ env.BRANCH_NAME }} | tr '[:upper:]' '[:lower:]')"
+#       - name: Привести название к нижнему регистру
+#         run: echo "::set-output name=BRANCH_NAME::$(echo ${{ env.BRANCH_NAME }} | tr '[:upper:]' '[:lower:]')"
 
-      - name: Проверить название ветки
-        run: |
-          if [ "${{ env.BRANCH_NAME }}" = "master" ]; then
-            echo "Выполнение прервано, так как название ветки равно 'master'"
-            exit 1
-          fi
+#       - name: Проверить название ветки
+#         run: |
+#           if [ "${{ env.BRANCH_NAME }}" = "master" ]; then
+#             echo "Выполнение прервано, так как название ветки равно 'master'"
+#             exit 1
+#           fi
 
-      - name: Install deps
-        run: yarn
+#       - name: Install deps
+#         run: yarn
 
-      - name: Cache Yarn packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/yarn
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+#       - name: Cache Yarn packages
+#         uses: actions/cache@v3
+#         with:
+#           path: ~/.cache/yarn
+#           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+#           restore-keys: |
+#             ${{ runner.os }}-yarn-
 
-      # - name: Build App
-      #   run: yarn build
+#       # - name: Build App
+#       #   run: yarn build
 
-      - name: Install Lokalise Cli
-        run: curl -sfL https://raw.githubusercontent.com/lokalise/lokalise-cli-2-go/master/install.sh | sh
+#       - name: Install Lokalise Cli
+#         run: curl -sfL https://raw.githubusercontent.com/lokalise/lokalise-cli-2-go/master/install.sh | sh
 
-      - name: Get translations
-        run: node extract_translations.js
+#       - name: Get translations
+#         run: node extract_translations.js
 
-      - name: Upload translations
-        run: ./bin/lokalise2 --token b319d056c11b5779919044529c75d9c3db60a45d file upload --file translations.json --lang-iso en --project-id 4479144264646922bb4ee1.51100677
+#       - name: Upload translations
+#         run: ./bin/lokalise2 --token b319d056c11b5779919044529c75d9c3db60a45d file upload --file translations.json --lang-iso en --project-id 4479144264646922bb4ee1.51100677
