--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "glob": "^10.2.6",
     "html-webpack-plugin": "^5.5.0",
     "i18next": "^22.4.15",
+    "i18next-http-backend": "^2.2.1",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
